# WebMCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/nginx/: web-mcp.locations.conf
deploy/systemd/: web-mcp.service
scripts/: smoke_test.py  sync_to_server.ps1
src/: chunking.py  config.py  direct_fetch.py  errors.py  exa_client.py  headers.py  input_aliases.py  input_normalization.py  jina_client.py  open_chunks.py  page_fetcher.py  server.py  tools.py
src/web_mcp/: chunking.py  config.py  direct_fetch.py  exa_client.py  headers.py  input_normalization.py  jina_client.py  mediawiki.py  models.py  open_chunks.py  package_registry.py  page_fetcher.py  server.py  tools.py
tests/: test_chunking.py  test_direct_fetch.py  test_errors.py  test_exa_client.py  test_input_normalization.py  test_jina_client.py  test_mediawiki.py  test_open_chunks.py  test_package_registry.py  test_page_fetcher.py  test_tools_find.py
