[project]
name = "web-mcp"
version = "0.1.0"
description = "Streamable HTTP MCP service for Exa search and Jina page reading"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exa-py",
    "httpx",
    "mcp",
    "pydantic",
    "pyyaml",
    "starlette",
    "tiktoken",
    "uvicorn[standard]",
]

[dependency-groups]
dev = ["pyright", "pytest", "pytest-asyncio", "respx", "ruff"]

[project.scripts]
web-mcp = "web_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_mcp"]

[tool.ruff]
src = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "scripts"]
